--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,12 +52,12 @@ endif()
 set(JUCE_BUILD_LV2 OFF CACHE BOOL "Disable LV2")
 set(JUCE_BUILD_ARA OFF CACHE BOOL "Disable ARA")
 
-Include (FetchContent)
-FetchContent_Declare (melatonin_inspector
-		GIT_REPOSITORY https://github.com/sudara/melatonin_inspector.git
-		GIT_TAG origin/main
-		SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/melatonin_inspector)
-FetchContent_MakeAvailable (melatonin_inspector)
+#Include (FetchContent)
+#FetchContent_Declare (melatonin_inspector
+#		GIT_REPOSITORY https://github.com/sudara/melatonin_inspector.git
+#		GIT_TAG origin/main
+#		SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/melatonin_inspector)
+#FetchContent_MakeAvailable (melatonin_inspector)
 
 juce_add_plugin("${PROJECT_NAME}"
     ICON_BIG "${CMAKE_CURRENT_SOURCE_DIR}/packaging/icon.png"
