--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@
 cmake-build-debug/
 cmake-build-release/
 tests/Reaper/Backups/**
-tests/Reaper/Results/**
-tests/Reaper/Reference/*.txt
+tests/Results/**
+tests/Reference/*.txt
