--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .idea/
 cmake-build-debug/
 cmake-build-release/
+cmake-build-release-visual-studio/**
 tests/Reaper/Backups/**
 tests/Results/**
 tests/Reference/*.txt
+tests/Reaper/Media/peaks/**
